gitops/components/conjur/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-conjur
  labels:
    app.kubernetes.io/part-of: banking-demo
    app.kubernetes.io/name: conjur
    cluster: east
