gitops/components/conjur/rendered-release.yaml
---
# Source: conjur-oss/templates/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: banking-conjur
  name: conjur-oss-postgres
  labels: &AppPostgresServiceLabels
    app: conjur-oss-postgres
    chart: conjur-oss-2.1.1
    release: conjur-oss
    heritage: Helm
    app.kubernetes.io/name: conjur-oss
    app.kubernetes.io/component: postgres
spec:
  ports:
  - port: 5432
  selector: *AppPostgresServiceLabels
---
# Source: conjur-oss/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: banking-conjur
  name: conjur-oss
  labels: &AppConjurLabels
    app: conjur-oss
    chart: conjur-oss-2.1.1
    release: conjur-oss
    heritage: Helm
    app.kubernetes.io/name: conjur-oss
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector: *AppConjurLabels
---
# Source: conjur-oss/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: banking-conjur
  name: conjur-oss
  labels: &AppConjurLabels
    app: conjur-oss
    chart: conjur-oss-2.1.1
    release: conjur-oss
    heritage: Helm
    app.kubernetes.io/name: conjur-oss
    app.kubernetes.io/component: service
spec:
  replicas: 1
  selector:
    matchLabels: *AppConjurLabels
  template:
    metadata:
      labels: *AppConjurLabels
      annotations:
        # Automatically roll deployment if dependent secrets have been changed
        checksum/secrets: dbaba3f9667dd1957d0adc61c78f22e31c7474187d5ebf36ce0ca707098b09cc
        checksum/ssl-cert: f651b4e680e348262ca5c858d37aa84d0a6ec69776dc411fb2d15ae4b5fe21af
        checksum/nginx-configmap: 0cd569edbf339a48d35cb279bba492db12a5628c09aac7698837662740de199b
    spec:
      serviceAccountName: conjur-oss
      volumes:
      - name: conjur-oss-conjur-ssl-cert-volume
        secret:
          secretName: conjur-oss-conjur-ssl-cert
          # Permission == 0400. JSON spec doesn't support octal notation.
          defaultMode: 256
      - name: conjur-oss-conjur-ssl-ca-cert-volume
        secret:
          secretName: conjur-oss-conjur-ssl-ca-cert
          # Permission == 0400. JSON spec doesn't support octal notation.
          defaultMode: 256
      - name: conjur-oss-conjur-configmap-volume
        configMap:
          name: conjur-oss-conjur-nginx-configmap
          items:
            - key: nginx_conf
              path: nginx.conf
            - key: mime_types
              path: mime.types
            - key: dhparams
              path: dhparams.pem
            - key: conjur_site
              path: sites-enabled/conjur.conf      
      containers:
      - name: conjur-oss-nginx
        image: "image-registry.openshift-image-registry.svc:5000/banking-conjur/nginx:1.27"
        imagePullPolicy: Always
        ports:
        - containerPort: 9443
          name: https
        - containerPort: 9000
          name: http
        livenessProbe:
          httpGet:
            path: /status
            scheme: HTTPS
            port: https
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 3
          # 1 seconds * 180 = 3 minutes
          failureThreshold: 180
        readinessProbe:
          httpGet:
            path: /status
            scheme: HTTPS
            port: https
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 3
          # 1 seconds * 180 = 3 minutes
          failureThreshold: 180
        volumeMounts:
        - name: conjur-oss-conjur-ssl-cert-volume
          mountPath: /opt/conjur/etc/ssl/cert
          readOnly: true
        - name: conjur-oss-conjur-ssl-ca-cert-volume
          mountPath: /opt/conjur/etc/ssl/ca
          readOnly: true
        - name: conjur-oss-conjur-configmap-volume
          mountPath: /etc/nginx
          readOnly: true
      - name: conjur-oss
        image: "image-registry.openshift-image-registry.svc:5000/banking-conjur/conjur:1.22"
        imagePullPolicy: Always
        # If the configured account has already been created, then start the
        # server without account creation. Otherwise, start the server with
        # account creation.
        command: ["bash"]
        args:
        - -c
        - |
           if conjurctl role retrieve-key banking:user:admin >/dev/null 2>&1; then
             conjurctl server;
           else
             conjurctl server --account=banking | grep -v 'API key for admin:';
           fi

        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 2
          # 1 seconds * 180 = 3 minutes
          failureThreshold: 180
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 1
          periodSeconds: 30
          timeoutSeconds: 30
          # 1 seconds * 180 = 3 minutes
          failureThreshold: 180
---
# Source: conjur-oss/templates/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: banking-conjur
  name: conjur-oss-postgres
  labels: &AppPostgresLabels
    app: conjur-oss-postgres
    chart: conjur-oss-2.1.1
    release: conjur-oss
    heritage: Helm
    app.kubernetes.io/name: conjur-oss
    app.kubernetes.io/component: postgres
spec:
  serviceName: conjur-oss-postgres
  replicas: 1
  selector:
    matchLabels: *AppPostgresLabels
  template:
    metadata:
      labels: *AppPostgresLabels
      annotations:
        checksum/secrets: 332046ae1cd76c9cae4ef82408a39553146c9d09de43c151320c6594dfdf9705
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - image: "image-registry.openshift-image-registry.svc:5000/banking-conjur/postgres:15"
        imagePullPolicy: Always
        name: postgres
        args: ["-c", "ssl=on", "-c", "ssl_cert_file=/etc/certs/tls.crt", "-c", "ssl_key_file=/etc/certs/tls.key"]
        volumeMounts:

        - name: postgres-data
          mountPath: "/var/lib/postgresql/data"
        - name: ssl-certs
          mountPath: "/etc/certs"
          readOnly: true
      volumes:

      - name: postgres-data
        persistentVolumeClaim:
          claimName: conjur-oss-conjur-oss-pvc
      - name: ssl-certs
        secret:
          secretName: conjur-oss-conjur-database-ssl
          # Set file permissions to 0600 (which corresponds to 384 decimal)
          defaultMode: 384
