gitops/components/conjur/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: conjur
  namespace: banking-conjur
  labels:
    app.kubernetes.io/name: conjur
    app.kubernetes.io/part-of: banking-demo
spec:
  to:
    kind: Service
    name: conjur-oss
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
